# bloom

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: blank.rs  cube.rs  maze.rs  ocean.rs  sail.rs
macros/: Cargo.toml
macros/src/: lib.rs
models/: cube.glb
shaders/archive/: ray.slang  ray_port.slang
shaders/spv/: closest_hit.rchit.spv  closest_hit.slang.spv  closest_hit_generic.slang.spv  closest_hit_triangle.slang.spv  fft.slang.spv  frag.slang.spv  frag.wgsl.spv  intersection.slang.spv  miss.slang.spv  ocean.slang.spv  physics.slang.spv  ray.comp.spv  ray.frag.spv  ray.slang.spv  raygen.slang.spv  triangle.vert.spv  viewport.vert.spv
shaders/src/: closest_hit.rchit  closest_hit.slang  closest_hit_generic.slang  closest_hit_triangle.slang  constants.slang  fft.slang  frag.slang  frag.wgsl  helpers.slang  intersection.slang  miss.slang  ocean.slang  physics.slang  quaternion.slang  ray.comp  ray.frag  ray.slang  raygen.slang  rng.slang  scatter.slang  structs.slang  triangle.vert  viewport.vert
src/: api.rs  bvh.rs  camera.rs  character.rs  cleanup.rs  compute.rs  core.rs  debug.rs  error.rs  lib.rs  main.rs  material.rs  ocean.rs  oceans.rs  physics.rs  primitives.rs  quaternion.rs  ray.rs  select.rs  structures.rs  sync.rs  tools.rs  transfer.rs  uniforms.rs  utils.rs  vec.rs  viewport.rs  vulkan.rs
src/primitives/: lentil.rs  model.rs  ocean.rs  sphere.rs
src/ray/: acceleration_structure.rs  descriptor.rs  instance_buffer.rs  texture_container.rs
(+1 files in other folders)
