[package]
name = "bloom"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
ash = { path = "./ash/ash" }
ash-window = { path = "./ash/ash-window" }
bytemuck = { version = "1.21", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.6"
image = "0.25.5"
log = "0.4"
memoffset = "0.9.1"
num = "0.4.3"
rand = "0.9.0"
vk-mem = { path = "./vk-mem-rs" }
winit = "0.30.8"
