[package]
name = "bloom"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
approx = "0.5.1"
ash = { path = "./ash/ash" }
ash-window = { path = "./ash/ash-window" }
bytemuck = { version = "1.21", features = ["derive"] }
cgmath = "0.18.0"
chrono = "0.4.41"
colored = "3.0.0"
env_logger = "0.11.6"
gltf = "1.4.1"
image = "0.25.5"
log = "0.4"
maze_generator = "2.0.0"
memoffset = "0.9.1"
num = "0.4.3"
rand = "0.9.0"
single_value_channel = "1.2.2"
vk-mem = { path = "./vk-mem-rs" }
winit = "0.30.8"
